Table accessibility process completed

--- a/index.html
+++ b/index.html
@@ -68,69 +68,70 @@
         <section class="calendar">
             <table>
                 <thead>
+                    <caption>
+                        Calendário
+                    </caption>
                     <tr>
-                        <th>dom</th>
-                        <th>seg</th>
-                        <th>ter</th>
-                        <th>qua</th>
-                        <th>qui</th>
-                        <th>sex</th>
-                        <th>sab</th>
+                        <th id="dom">dom</th>
+                        <th id="seg">seg</th>
+                        <th id="ter">ter</th>
+                        <th id="qua">qua</th>
+                        <th id="qui">qui</th>
+                        <th id="sex">sex</th>
+                        <th id="sab">sab</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>01</td>
-                        <td>02</td>
-                        <td>03</td>
-                        <td>04</td>
-                        <td>05</td>
-                        <td>06</td>
-                        <td>07</td>
+                        <td headers="dom">01</td>
+                        <td headers="seg">02</td>
+                        <td headers="ter">03</td>
+                        <td headers="qua">04</td>
+                        <td headers="qui">05</td>
+                        <td headers="sex">06</td>
+                        <td headers="sab">07</td>
                     </tr>
                     <tr>
-                        <td>08</td>
-                        <td>09</td>
-                        <td>10</td>
-                        <td>11</td>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
+                        <td headers="dom">08</td>
+                        <td headers="seg">09</td>
+                        <td headers="ter">10</td>
+                        <td headers="qua">11</td>
+                        <td headers="qui">12</td>
+                        <td headers="sex">13</td>
+                        <td headers="sab">14</td>
                     </tr>
                     <tr>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
-                        <td>18</td>
-                        <td>19</td>
-                        <td>20</td>
-                        <td>21</td>
+                        <td headers="dom">15</td>
+                        <td headers="seg">16</td>
+                        <td headers="ter">17</td>
+                        <td headers="qua">18</td>
+                        <td headers="qui">19</td>
+                        <td headers="sex">20</td>
+                        <td headers="sab">21</td>
                     </tr>
                     <tr>
-                        <td>22</td>
-                        <td>23</td>
-                        <td>24</td>
-                        <td class="day">25</td>
-                        <td>26</td>
-                        <td>27</td>
-                        <td>28</td>
+                        <td headers="dom">22</td>
+                        <td headers="seg">23</td>
+                        <td headers="ter">24</td>
+                        <td  headers="qua" class="day">25</td>
+                        <td headers="qui">26</td>
+                        <td headers="sex">27</td>
+                        <td headers="sab">28</td>
                     </tr>
                     <tr>
-                        <td>29</td>
-                        <td>30</td>
-                        <td>31</td>
+                        <td headers="dom">29</td>
+                        <td headers="seg">30</td>
+                        <td headers="ter">31</td>
                     </tr>
                 </tbody>
                 <tfoot>
                 </tfoot>
             </table>
         </section>
-    
-        
     </main>
     <footer id="rodape">
         <ul>
-            <li><a href="https://pt.wikipedia.org/wiki/Dwayne_Johnson" target="_blank">Link Wikipedia</a></li>
+            <li><a href="https://pt.wikipedia.org/wiki/Dwayne_Johnson" target="_blank" alt="opens new window">Link Wikipedia (opens new window)</a></li>
         </ul>
     </footer>
 </body>
