--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <td>Brazilian</td>
       </tr>
   </table>
-  <section>
+  <section class="lado-esquerdo">
 <ol id="licoes_aprendidas">
   <li>Unix</li>
   <li>Git</li>
@@ -58,13 +58,15 @@
     <li>SQL</li>
 </ul>
 </section>
-<article id="sobre">
+<article id="sobre" class="lado-direito">
+    <h2>My Journey</h2>
     <p>I'm on a new journey here at Trybe, every day I face new challenges and new achievements. It's been a unique learning experience, not only about the Hard Skills that I'm developing, but also about my self-knowledge with Soft Skills.I am more motivated every day, with each new class, new lectures and new projects.So let's go Trybe!</p>
 </article>
-<aside>
+<aside class="aside">
+    <h2>My Experience</h2>
     <p>Lessons Learned is my first project and it's been amazing to develop  with all the HTML and CSS knowledge I learned in 4 days! That's right! 4 days of classes and content at Trybe and I'm already managing to put it into practice. one of the most motivating moments since I started the course.</p>
 </aside>
-<h2 id="contato">Contato</h2>
+<h2 id="contato">Contact</h2>
 <a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a><br>
 <a href="https://www.linkedin.com/in/millene-galetti-acosta-7a0110202/" target="_blank">Meu Linkedin</a>
 <footer id="rodape">Todos os direitos reservados,Millene Galetti &reg</footer>
