--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
         <br>
         <article id="artigo">
+
             <h2>O início de uma jornada</h2>
-            <p>Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
+            <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p>
+            
         </article>
+        <section>
+            <aside class="right">
+                <p>O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.
+                </p>
+            </aside>
+        </section>
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <h3>Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
