Altera lista ordenada e insere lista não ordenada

--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
     <meta charset="utf-8">
     <title>Lessons Learned | Leandro Silva | Trybe | T16-B</title>
     <link rel="stylesheet" href="style.css">
-    
   </head>
   <body>
 		<header id="cabecalho">
     	<h1 id="titulo">Lessons Learned</h1>
 		</header>
 		<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
-		
 		<ol id="licoes_aprendidas">
-			<li>Javascript</li>
+			<li>kernel</li>
+			<li>Shell</li>
+			<li>Bash</li>
+			<li>Git</li>
+			<li>GitHub</li>
 			<li>HTML</li>
 			<li>CSS</li>
+			<li>Estruturas de páginas</li>
+			<li>Seletores e posicionamento</li>
+			<li>Html semântico</li>
+		</ol>
+		<ul>
+			<li>Javascript</li>
 			<li>React</li>
 			<li>Node</li>
 			<li>Express.js</li>
 			<li>SQL</li>
 			<li>NoSQL</li>
-			<li>Git</li>
 			<li>Python</li>
-		</ol>
+			<li>ORM</li>
+			<li>Lógica de programação</li>
+			<li>Algoritmos e estrutura de dados</li>
+		</ul>
   </body>
 </html>
