--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </div>
 
-    <img id="minha_foto" src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
+    <div>
+        <img id="minha_foto" src="Erick VIana.png" alt="Homem em um campo de futebol, com blusa preta, calça cinza com braços para trás, segurando um apito enquanto observao uma partida de futebol">
+    </div>
+
 
     <ol id="licoes_aprendidas">
        <li>Unix</li>
@@ -27,5 +30,19 @@
        <li>Inspect</li>
        <li>Semantica HTML</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+
+    </ul>
 </body>
 </html>
