--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 	    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
 	</header>
 
+    <picture>
+        <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
+    </picture>
+ 
 </body>
 </html>
