--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
     <li>SQL</li>
 </ul>
 </section>
-<section>
-<article id="sobre" class="lado-direito">
+<section class="lado-direito">
+<article id="sobre">
     <h2>My Journey</h2>
     <p>I'm on a new journey here at Trybe, every day I face new challenges and new achievements. It's been a unique learning experience, not only about the Hard Skills that I'm developing, but also about my self-knowledge with Soft Skills.I am more motivated every day, with each new class, new lectures and new projects.So let's go Trybe!</p>
 </article>
+</section>
 <aside class="aside">
     <h2>My Experience</h2>
     <p>Lessons Learned is my first project and it's been amazing to develop  with all the HTML and CSS knowledge I learned in 4 days! That's right! 4 days of classes and content at Trybe and I'm already managing to put it into practice. one of the most motivating moments since I started the course.</p>
-</section>
+
 </aside>
 <h2 id="contato">Contact</h2>
 <a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a><br>
