--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 			<li>Lógica de programação</li>
 			<li>Algoritmos e estrutura de dados</li>
 		</ul>
+		<footer id="rodape">Jeito tryber de ser</footer>
   </body>
 </html>
