--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <picture>
         <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
     </picture>
+
+    <ol id="licoes_aprendidas">
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Emoções</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+    </ol>
  
 </body>
 </html>
