--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         <li>CSS</li>
         <li>HTML Semântico</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>Flexbox</li>
+        <li>ES6</li>
+        <li>Testes Unitários</li>
+        <li>HOF</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+    </ul>
  
 </body>
 </html>
