--- a/index.html
+++ b/index.html
@@ -107,16 +107,18 @@
           </tbody>
         </table>
       </section>
-      <section>
-        <h2>Meu aprendizado</h2>
-        <article>
-          <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
-        </article>
-      </section>
-      <aside>
-        <h2>Um breve resumo</h2>
-        <p>Iniciei na Trybe aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Depois, passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual sobre HTML e CSS.</p>
-      </aside>
+      <div class="linha">
+        <section class="lado-esquerdo">
+          <h2>Meu aprendizado</h2>
+          <article>
+            <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
+          </article>
+        </section>
+        <aside class="lado-direito">
+          <h2>Um breve resumo</h2>
+          <p>Iniciei na Trybe aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Depois, passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual sobre HTML e CSS.</p>
+        </aside>
+      </div>
     </main>
     <footer id="rodape">
       <p>Criado por Natã Elienai, 2021.</p>
