Adiciona link externo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 			<li>Lógica de programação</li>
 			<li>Algoritmos e estrutura de dados</li>
 		</ul>
-		<footer id="rodape">Jeito tryber de ser</footer>
+		<footer id="rodape">Jeito <a href="https://www.betrybe.com/" target="_blank">tryber</a> de ser</footer>
   </body>
 </html>
