--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
       <article id="aprendizado">
         <h2>Meu aprendizado</h2>
         <p>Meu estudo na Trybe se iniciou com o Unix, aprendi que ele é a base para conseguir ser um bom profissional e atuar na área de desenvolvimento. Passei por Git e Github entendendo seu processo e uso para projetos com grandes equipes e como ele pode salvar a sua pele caso cometa algum erro. Atualmente estou na etapa de HTML e CSS, e este projeto tem o objetivo de testar meu conhecimento adquirido até aqui.</p>
-      </article>
-      
-      <ol id="licoes_aprendidas">
+      </article>      
+      <ol class="lado-direito" id="licoes_aprendidas">
         <h2>Lições aprendidas:</h2>
         <li>Unix</li>
         <li>Bash</li>
@@ -39,7 +38,7 @@
         <li>CSS Seletores e Posicionamento</li>
         <li>HTML Semântico</li>
       </ol>
-      <ul id="licoes_a_aprender">
+      <ul class="lado-esquerdo" id="licoes_a_aprender">
         <h2>Lições que desejo aprender:</h2>
         <li>JavaScript</li>
         <li>DOM (Document Object Model)</li>
