implement new footer strucuture and applying the style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="my_infos border_secondary cover_height">
                         <ul class="d_flex no_decoration">
-                            <li>Gender: Cis/Male</li>
+                            <li>Gender: Cis/Man</li>
                             <li>Age: 20</li>
                             <li>Nacionality: Brazilian</li>
                         </ul>
@@ -119,14 +119,32 @@
         </div>
     </main>
 
-    <footer id="rodape">
-        <div>
-            <nav>
-                <ul>
-                    <li></li>
-                    <!-- Lista com contatos + infos pessoais -->
-                </ul>
-            </nav>
+    <footer id="rodape" class="cover_width sec_divisor">
+        <div class="container d_flex split_between center_all">
+            <div class="lado-esquerdo">
+                <nav class="navbar">
+                    <ul class="no_decoration">
+                        <li>
+                            <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer">GitHub</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="mailto:gabriel.h.silvestre11@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+    
+            <div class="lado-direito">
+                <table>
+                    <tr>
+                        <td><p>Last update:</p></td>
+                        <td><p>25 ago 2021</p></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </footer>
 
