--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
 
     </head>
     <body>
-        <header id="cabecalho";>   
-            <h1 id="titulo"> botando em prática</h1> 
-            <div id="minha_foto"> <img src="" alt=""> </div>
-            <nav> <a href="">  </a></nav>
+        <header id="cabecalho">
+            <h1 id="titulo"> <h1>  Lições aprendidas </h1> 
+            <div id="minha_foto"><img src="eu.jpg" width="100px"> </div>
+            <nav> <a href=""> |Home </a>
+                <a href="">   |Saiba Mais </a>
+                <a href="">    |Contato </a>
+                </nav>
 
         </header>   
-        <div>
-            <ol id="licoes_aprendidas">
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
+        <div id= "licoes_aprendidas">
+            <h2>Lições aprendidas</h2>
+            <ol >
+                <li> aprendi a organizar melhor meu tempo</li>
+                <li> aprendi a ser mais paciente</li>
+                <li> aprendi a aprender com outras pessoas</li>
+                <li> aprendi que tudo pode sempre melhorar </li>
+                <li> aprendi a aproveitar melhor as horas vagas</li>
+                <li> aprendi a aprender melhor </li>
+                <li> aprendi a </li>
+                <li> aprendi a</li>
+                <li> aprendi a</li>
+                <li> aprendi a </li>
             </ol>
             
         </div>
-        <div>
-            <ul id="licoes_a_aprender">
+        <div id="licoes_a_aprender">
+            <h2> lições a aprender</h2>
+            <ul >
                 <li></li>
                 <li></li>
                 <li></li>
@@ -50,15 +55,6 @@
         <aside>
 
         </aside>
-
-        <table class="tabela">
-            <td>
-
-            </td>
-        </table>
-
-        
-
 
         <footer id="rodape">
 
