Ultimas alteracoes feitas, projeto finalizado

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
                 <li>Aprender a organizar melhor meu tempo.</li>
                 <li>Construir códigos mais limpos e organizados.</li>
-                <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
+                <li>Saber passar meu conhecimento de forma mais didática.</li>
               </ul>
             </td>
           </tr>
@@ -88,6 +88,5 @@
     <footer id="rodape">
       <p><b>Página desenvolvida por Rael Nogueira Pires no Projeto Lessons Learned, 2021.</b></p>
     </footer>
-
   </body>
 </html>
