--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 
     </div>
 
+    <article>
+
+        <p></p>
+
+    </article>
+
+    <footer id="rodape">
+
+        <h3><a href="https://www.betrybe.com/" target="_blanck">Trybe ©</a></h3>
+
+    </footer>
+
     
     
 </body>
