Alguns requisitos a mais

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <main>
         <header id="cabecalho">
-            <h1>Lessons Learned</h1>
+            <h1 id="titulo">Lessons Learned</h1>
+            <nav>
+                <ul>
+                    <li><a target="blank_page" href="https://www.betrybe.com/">Trybe</a></li>
+                    <li><a target="blank_page" href="https://www.betrybe.com/">Linkedin</a></li>
+                </ul>
+            </nav>
         </header>
         <img id="minha_foto" src="minhafoto.jpeg" alt="victor calidor">
         <section>
@@ -29,7 +35,7 @@
                     <li>Semantic Html</li>
                 </ol>
             </div>
-            <div>
+            <div class="div_direito">
                 <h2>Lições a aprender:</h2>  
                 <ul id="licoes_a_aprender">
                     <li>Javascript</li>
@@ -46,14 +52,15 @@
             </div>
         </section>
         <article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem esse nam eum, natus fugiat quos omnis ea quam mollitia. Asperiores quod libero nam repudiandae molestiae, a odio corporis sit nemo!</p>
+            <h2>Meu aprendizado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem esse nam eum, natus fugiat quos omnis ea quam mollitia. Asperiores quod libero nam repudiandae molestiae, a odio corporis sit nemo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quasi, facilis praesentium debitis sed dolores asperiores iusto, tenetur temporibus amet, quae sunt numquam aperiam eligendi. Excepturi voluptatibus ducimus deleniti! Nostrum.</p>
         </article>
         <aside>
+            <h2>Curiosidade</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, repellat! Quidem doloribus cumque dolorem ex vitae voluptatibus ipsum numquam quibusdam sed? Obcaecati dolorum, maiores autem quisquam nobis in itaque doloribus.</p>
         </aside>
     </main>
     <footer id="rodape">
-
     </footer>
 </body>
 </html>
