atualização de link Externo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <li>Semantic HTML</li>
     </ol>   
     
+    <a href="https://www.betrybe.com/" target="_blank">link Externo</a>
+
     <footer>
          
        <p>Todos os direitos reservados, Antonio</p> 
