--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <main>
     <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
 
+    <h2 id="lista_licoes">Listas:</h2>
+
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Bash</li>
@@ -28,6 +30,19 @@
         <li>Slack</li>
         <li>Autoconhecimento</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>CSS Responsive</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>Python</li>
+        <li>Redes</li>
+        <li>ES6</li>
+        <li>DOM</li>
+    </ul>
   </main>  
 </body>
 </html>
