decimo segundo e decimo terceiro requisito concluido

--- a/index.html
+++ b/index.html
@@ -49,6 +49,46 @@
         <li>Solid</li>
         <li>Python</li>
       </ul>
+
+      <table class="tabela">
+        <caption><h2>Módulos Trybe</h2></caption>
+        <tr>
+          <th>Fundamentos</th>
+          <th>Front-end</th>
+          <th>Back-end</th>
+          <th>Ciências da Computação</th>
+        </tr>
+        <tr>
+          <td>Unix</td>
+          <td>React</td>
+          <td>SQL</td>
+          <td>Python</td>
+        </tr>
+        <tr>
+          <td>Bash</td>
+          <td>Metodologias Ágeis</td>
+          <td>MongoDB</td>
+          <td>POO</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>Redux</td>
+          <td>Node JS</td>
+          <td>Algoritmos</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>React Router</td>
+          <td>Solid</td>
+          <td>Redes</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>React Testing Library</td>
+          <td>Sockets</td>
+          <td>Estrutura de Dados</td>
+        </tr>
+      </table>
     </section>
 
     <article class="artigo" id="artigos">
