6. Adicione um rodapé para a página

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <li>ES6</li>
         <li>DOM</li>
     </ul>
-  </main>  
+  </main>
+
+  <footer id="rodape">Todos os direitos reservados, Jonatas</footer>
 </body>
 </html>
