--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+
+    <footer id="rodape">
+        <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!"</em> | Go Trybe.</p>
+    </footer>
+    
  
 </body>
 </html>
