--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
         <header id="cabecalho">
                 <h1 id="titulo">Lessons Learned</h1>
         </header>
-
+        <nav>
+            <ul>
+                <li><a href="#artigo">Início de uma jornada</a></li>
+                <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
+                <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
+            </ul>
+        </nav>
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
-        <br>
+        <main>
         <article id="artigo">
 
             <h2>O início de uma jornada</h2>
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p>
-            
-        </article>
         <section>
             <aside class="right">
                 <p>O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.
                 </p>
             </aside>
         </section>
+       </article>
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <h3>Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
@@ -54,9 +59,9 @@
             <li>JavaScript Promises</li>
             <li>Jest</li>
         </ul>
-    </body>
+    </main>
     <footer id="rodape">
         <p>Rodapé</p>
     </footer>
+    </body>
 </html>
-
