7. Insira pelo menos um link externo na página

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <main>
     <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
+    <a href="https://jonataspassos96.github.io/" target="_blank">Jonatas Passos</a>
 
     <h2 id="lista_licoes">Listas:</h2>
 
