Insere experiência de aprendizado

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     	<h1 id="titulo">Lessons Learned</h1>
 		</header>
 		<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
+		<article>
+			<h2>Estudar na Trybe</h2>
+			<p> 
+				Certamente faltam palavras para descrever o aprendizado junto com a Trybe. Então vou exemplificar dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos, com foco nas hard skills e também soft skills - o aprendizado não para! 
+			</p>
+			<p>
+				E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e qualificação, mas nada descreve a sensação de se sentir em casa - tanto no sentido literal, quanto figurado. #vqv #GoTrybe
+			</p>
+		</article>
 		<ol id="licoes_aprendidas">
 			<li>kernel</li>
 			<li>Shell</li>
