--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
       <li>Metodologias para resolução de problemas</li>
     </ul>
   </section>
+  <article>
+    <h2>Meu aprendizado</h2>
+    <p>Durante as duas semanas completas como estudante da Trybe, puder notar
+      um grande avanço na curva de aprendizado. Além de adquirir novas
+      habilidades, como utilizar Git e Github e desenvolver páginas web com
+      HTML e CSS, também aprendi a realizar pesquisas de forma eficaz para
+      sanar qualquer dúvida que surja no processo, ou seja, aprendi a aprender
+      e carrego a certeza de que, ao longo da minha formação, aprenderei muito
+      mais.</p>
+  </article>
   <footer id="rodape">
     <p>Conteúdo produzido e atualizado por <em>Tainá Santana</em>, 2021.</p>
   </footer>
