--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                     <h2>Ary Barbosa</h2>
                 </figcaption>
             </figure>
+            <article>
+                O processo de aprendizado na Trybe está sendo muito satisfatório, a forma como é estruturado o dia, é um
+                fator crucial para o aprendizado. Poder estudar o conteúdo que será abordado no dia, antes da aula,
+                possibilita uma maior absorvição do que é mostrado na aula ao vivo, exercício seguido por monitoria
+                facilita muito na fixação do conteúdo.  Esse conjunto de fatores possibilita no processo de
+                aprendizagem. 
+            </article>
         </section>
         <section>
             <p>
