Adicionando texto na tag footer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 				</aside>
 			</div>
 		</section>
-	<footer id="rodape"></footer>
+	<footer id="rodape">
+		<span>Todos os direitos reservados à Bruno Ribeiro</span>
+	</footer>
 </body>
 </html>
