8. Crie um artigo sobre seu aprendizado

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <li>ES6</li>
         <li>DOM</li>
     </ul>
+
+    <article>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit possimus accusantium earum quibusdam ea culpa eligendi commodi natus excepturi adipisci ipsum saepe, suscipit delectus ab, porro harum voluptatem? Laudantium, ratione.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime, ex mollitia aliquid vero officia sint facere nobis deserunt nam modi minima ea labore. Autem odio odit aliquam culpa quisquam.
+    </article>
   </main>
 
   <footer id="rodape">Todos os direitos reservados, Jonatas</footer>
