--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<article>
 			<h2>Estudar na Trybe</h2>
 			<p> 
-				Certamente faltam palavras para descrever o aprendizado junto com a Trybe. Então vou exemplificar dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos, com foco nas hard skills e também soft skills - o aprendizado não para! 
+				Falta palavras para descrever o aprendizado com a Trybe. Então exemplifico dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!  
 			</p>
 			<p>
-				E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e qualificação, mas nada descreve a sensação de se sentir em casa - tanto no sentido literal, quanto figurado. #vqv #GoTrybe
+				E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.
 			</p>
 		</article>
 		<ol id="licoes_aprendidas">
@@ -43,6 +43,11 @@
 			<li>Lógica de programação</li>
 			<li>Algoritmos e estrutura de dados</li>
 		</ul>
+		<aside>
+			<p>
+
+			</p>
+		</aside>
 		<footer id="rodape">Jeito <a href="https://www.betrybe.com/" target="_blank">tryber</a> de ser</footer>
   </body>
 </html>
