att link hmt&css fora do footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
     </aside>
 
     <footer id="rodape">
-        <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_black">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
+
+        <p> Feito por Thiago José, Turma 16 - Tribo B. 2021</p>
     </footer>
+    <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_black">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
+
 </body>
 </html> 
