Add exercise 6 completed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <li>Estrutura de dados</li>
       <li>Python</li>
     </ul>
+
+    <footer id="rodape">
+      
+    </footer>
   </main>
   
 </body>
