--- a/index.html
+++ b/index.html
@@ -16,45 +16,48 @@
             <a href="https://everton-curti.github.io/" target="_blank">Everton Curti - Portifólio</a>
         </nav>
 
-        <section>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Sql</li>
-                <li>MongoDb</li>
-                <li>Python</li>
-            </ol>
-        </section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Sql</li>
+            <li>MongoDb</li>
+            <li>Python</li>
+        </ol>
 
-        <section>
-            <ul id="licoes_a_aprender">
-                <li>Dom</li>
-                <li>Forms</li>
-                <li>Semantic</li>
-                <li>ES6</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>C++</li>
-                <li>HOF</li>
-                <li>Dom</li>
-                <li>Inspect</li>
-            </ul>
-        </section>
+        <ul id="licoes_a_aprender">
+            <li>Dom</li>
+            <li>Forms</li>
+            <li>Semantic</li>
+            <li>ES6</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>C++</li>
+            <li>HOF</li>
+            <li>Dom</li>
+            <li>Inspect</li>
+        </ul>
 
-        <article class="artigo">
-            <h2>Texto do Artigo</h2>
-                Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto. 
-        </article>
-                    
-        <aside class="artigo">
-           <h2>Seção com Aside</h2>
-                Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto.
-        </aside>
+        <section class="alinhar-artigos">        
+            <div class="artigo">
+                <article class="lado-esquerdo">
+                    <h2>Texto do Artigo</h2>
+                            Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto.
+                </article>
+            </div>
+
+            <div class="artigo">
+                <aside class="lado-direito">
+                    <h2>Seção com Aside</h2>
+                        Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto.
+                </aside>
+            </div>
+        </section>            
+        
 
         <section>
             <h2 class="title-table">Informações Pessoais:</h2>
