att caracteres aprendizado

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
     </div>
     <article class="lado-esquerdo">
         <h3>Artigo Aprendizado</h3>
-        <p>O meu processo de aprendizagem acontece a partir da aquisição de conhecimentos, habilidades,<br> 
-            valores e atitudes através do estudo, do ensino ou da experiência. A construção de conhecimentos<br> 
+        <p>Meu processo de aprendizagem acontece a partir da aquisição de conhecimentos, habilidades,<br> 
+            e atitudes através do estudo, do ensino e experiência. A construção de conhecimentos<br> 
             deve se constituir de forma gradativa adequando-se a cada estágio do desenvolvimento.<br> 
-            A educação nem sempre é cercada somente por sucessos e aprovações. Muitas vezes, no decorrer do ensino,<br> 
+            A educação nem sempre é cercada somente por sucessos e aprovações.No decorrer do ensino,<br> 
             nos deparamos com problemas que nos deixam paralisados diante do processo de aprendizagem,<br>
              porém o esforço o faz seguir adiante.</p>
     </article>
 
     <aside class="lado-direito">
         <h3>Passagem Aprendizado</h3>
-        <p>Tenho a visão de que a jornada no curso da Trybe trata-se de uma longa trilha <br>
-        ingrime onde o unico caminho de volta é na base da queda. Então nessa jornada de aprendizado cada passo <br>
+        <p>A visão de que a jornada no curso da Trybe trata-se de uma longa trilha <br>
+        ingrime onde o unico caminho de volta é a queda.Nessa jornada de aprendizado cada passo <br>
         tem que ser dado com firmeza  e inteligencia, para que não caia durante cada passo.</p>
     </aside>
 
