--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 			<li>Algoritmos e estrutura de dados</li>
 		</ul>
 		<aside>
+			<h2>Mão na massa</h2>
 			<p>
-
+				A Trybe nos ajuda a aprender programação colocando a mão na massa e trabalhar com pessoas das mais diferentes culturas e regiões, basta ter conexão com a internet.
 			</p>
 		</aside>
 		<footer id="rodape">Jeito <a href="https://www.betrybe.com/" target="_blank">tryber</a> de ser</footer>
