9. Crie uma seção que conta uma passagem sobre seu aprendizado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - TRYBE! 🚀</h1>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Links</a>
+    </nav>
   </header>
 
   <main>
@@ -49,6 +54,15 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit possimus accusantium earum quibusdam ea culpa eligendi commodi natus excepturi adipisci ipsum saepe, suscipit delectus ab, porro harum voluptatem? Laudantium, ratione.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime, ex mollitia aliquid vero officia sint facere nobis deserunt nam modi minima ea labore. Autem odio odit aliquam culpa quisquam.
     </article>
+
+    <section>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum voluptate commodi voluptatem eveniet dolorum asperiores dolor expedita eaque sit vel ad adipisci enim praesentium velit quos, soluta voluptatibus officiis deleniti.
+
+        <aside>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum voluptate commodi voluptatem eveniet dolorum asperiores dolor expedita eaque sit vel ad adipisci enim praesentium velit quos, soluta voluptatibus officiis deleniti.
+
+        </aside>
+    </section>
   </main>
 
   <footer id="rodape">Todos os direitos reservados, Jonatas</footer>
