Add exercise 7 completed

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
       <li>Estrutura de dados</li>
       <li>Python</li>
     </ul>
+    <a href="https://docs.github.com/pt" target="_blank">documentação github</a>
 
     <footer id="rodape">
-      
+
     </footer>
   </main>
   
