decimo quarto requisito concluido

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </article>
 
     <aside class="sidebar">
-      <p>Conseguir compreender o sentido do git foi um dos aprendizados mais incríveis até o momento, pois já trabalho com outra ferramenta de versionamento, mas aqui eu conseguir entender a lógica de determinadas ações, nas quais já busquei entender sozinho, mas não havia conseguido.</p>
+      <p>Conseguir compreender o sentido do git, foi um dos aprendizados mais incríveis até o momento, pois já trabalho com outra ferramenta de versionamento, mas aqui, eu conseguir entender a lógica de determinadas ações, nas quais já busquei entender sozinho, mas não havia conseguido.</p>
     </aside>
   </main>
   <footer id="rodape">
