--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 	    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
 	</header>
 
-    <picture>
+    <figure>
         <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
-    </picture>
+    </figure>
+
+    <nav id="social-icons">
+    <a href="https://github.com/Andre-S-Melo" target="_blank">GitHub</a>
+    </nav>
 
     <ol id="licoes_aprendidas">
         <li>Slack</li>
@@ -46,7 +50,8 @@
     <footer id="rodape">
         <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!"</em> | Go Trybe.</p>
     </footer>
-    
+
+
  
 </body>
 </html>
