--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
     <aside class="lado-direito">
         <h3>Passagem Aprendizado</h3>
-        <p>A visão de que a jornada no curso da Trybe trata-se de uma longa trilha <br>
-        ingrime onde o unico caminho de volta é a queda.Nessa jornada de aprendizado cada passo <br>
-        tem que ser dado com firmeza  e inteligencia, para que não caia durante cada passo.</p>
+        <p>A visão de que a jornada na Trybe trata-se de uma longa trilhaingrime onde o unico<br>
+            caminho de volta é a queda.Nessa jornada de aprendizado cada passo tem que ser <br>
+            dado com firmeza  e inteligencia, para que não caia durante cada passo.</p>
     </aside>
 
     <footer id="rodape">
