att3 -.- caracteres aprendizado

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <aside class="lado-direito">
         <h3>Passagem Aprendizado</h3>
-        <p>A visão de que a jornada na Trybe trata-se de uma longa trilhaingrime onde o unico<br>
+        <p>A visão de que a jornada na Trybe é uma longa trilha ingrime onde o unico<br>
             caminho de volta é a queda.Nessa jornada de aprendizado cada passo tem que ser <br>
             dado com firmeza  e inteligencia, para que não caia durante cada passo.</p>
     </aside>
