--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 
         <header id="cabecalho">
-                <h1 id="titulo">Lessons Learned</h1>
+                <h1>Lessons Learned</h1>
         </header>
         <nav>
             <ul>
@@ -24,14 +24,14 @@
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p>
         </article>
-            <aside class="right">
+            <aside>
                 <p>O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.
                 </p>
             </aside>
     
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <section>
-        <h3>Lições aprendidas</h3>
+        <h3 class="left">Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
             <li>Fundamentos do Desenvolvimento Web</li>
             <li>Unix & Shell</li>
@@ -45,7 +45,7 @@
             <li>Introdução ao JavaScript</li>
         </ol>
         
-        <h3>Lições a aprender</h3>
+        <h3 class="right"> Lições a aprender</h3>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>Lógica de Programação</li>
